# ollama-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  server.py
