[project]
name = "ollama-mcp"
version = "0.1.0"
description = "A lightweight MCP server that exposes Ollama Cloud models as tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10",
    "ollama>=0.6.0",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/chakkritt/ollama-mcp"
Repository = "https://github.com/chakkritt/ollama-mcp"

[tool.ruff]
line-length = 100
